--- a/src/app/screens/dynamic-cpn/dynamic-cpn.component.html
+++ b/src/app/screens/dynamic-cpn/dynamic-cpn.component.html
@@ -2,3 +2,6 @@
 <button class="btn btn-success" (click)="showCpnTwo()">Tab2</button>
 
 <ng-template dynamicCpn></ng-template>
+
+
+<div class="btn btn-secondary" #submit>Submit</div>
