--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+<a class="btn btn-success" routerLink="ft">FT 1</a>
+<a class="btn btn-success ms-3" routerLink="ft2">FT 2</a>
+<a class="btn btn-success ms-3" routerLink="dynamic">Dynamic Component</a>
+<a class="btn btn-success ms-3" routerLink="circle">Circle</a>
+
 <!--
-<a routerLink="ft">FT 1</a>
-<a routerLink="ft2">FT 2</a>
-
-
 <div class="alert alert-danger" transform="lowercase">tada</div>
 <div class="" style="display: flex; justify-content: center">
   <div class="" style="width: 50%;">
@@ -86,5 +88,7 @@
 
 </tab-bs-group>
 -->
+
+
 
 <router-outlet></router-outlet>
