--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,5 +90,6 @@
 -->
 
 
-
+<input type="file" (change)="change($event)">
+<textarea [(ngModel)]="fileContent"></textarea>
 <router-outlet></router-outlet>
