add virtual scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,24 @@
 </tab-bs-group>
 -->
 
-
+<!--
 <input type="file" (change)="change($event)">
 <textarea [(ngModel)]="fileContent"></textarea>
+<img [src]="srcImg" alt="Images by Create Obj URL">-->
 <router-outlet></router-outlet>
+<!--
+
+<div class="ho" style="width: 100%; display: flex; justify-content: center;">
+  <div class="tab">
+    <div class="box">Fakebook</div>
+  </div>
+</div>
+
+
+<div class="d-flexs">
+  <div class="n-item">One</div>
+  <div class="n-item active">Two</div>
+  <div class="n-item">Three</div>
+  <div class="n-item">Four</div>
+</div>
+-->
